storage/innobase/os/os0file.cc
@@ -3560,8 +3560,9 @@ os_file_get_status(
 
 extern void fil_aio_callback(const IORequest &request);
 
-static void io_callback(tpool::aiocb* cb)
+static void io_callback(void *_cb)
 {
+  tpool::aiocb* cb= static_cast<tpool::aiocb*>(_cb);
   const IORequest request(*static_cast<const IORequest*>
                           (static_cast<const void*>(cb->m_userdata)));
   if (cb->m_err != DB_SUCCESS)
